--- a/baigiamasis/main/aboutus/aboutus.html
+++ b/baigiamasis/main/aboutus/aboutus.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>About Us</title>
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light fixed-top bckgrnd">
@@ -41,7 +41,7 @@
 <div class="container">
     <div class="info bckgrnd">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet animi commodi cumque deserunt ea eius enim illo itaque, iusto modi nihil obcaecati praesentium quo sapiente sequi tenetur unde veniam!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet animi commodi cumque deserunt ea eius enim illo itaque, iusto modi nihil obcaecati praesentium quo sapiente sequi tenetur unde veniam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eveniet natus quod repudiandae voluptate! Adipisci aliquid, aperiam asperiores cum dicta doloremque est harum illum inventore iste nam natus non ut! Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque aut consectetur, debitis dolore eveniet excepturi harum, ipsam ipsum labore laborum neque nostrum praesentium quibusdam quisquam, quos sequi temporibus. Debitis.
         </p>
     </div>
 </div>
@@ -50,7 +50,7 @@
         <p class="col-md-4 mb-0 text-muted">© 2021 Sneakers for all, Inc</p>
 
         <a href="../main.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg"></use></svg>
+            <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg" alt="Home"></svg>
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
