--- a/baigiamasis/main/basket/basket.html
+++ b/baigiamasis/main/basket/basket.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Basket</title>
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light fixed-top bckgrnd">
@@ -41,10 +41,12 @@
 <div class="container">
     <div class="info bckgrnd">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet animi commodi cumque deserunt ea eius enim illo itaque, iusto modi nihil obcaecati praesentium quo sapiente sequi tenetur unde veniam!
+            Here will be listed all shoes that you have picked, you will be able to add or remove from this basket.
+            <br>
+            Coming soon.
         </p>
-        <a href="../payment/payment.html">
-        <button class="btn btn-secondary w-100" type="button" >Continue to checkout</button>
+        <a href="../payment/payment.html" class="btn btn-secondary w-100" role="button">
+            Continue to checkout
         </a>
     </div>
 </div>
@@ -53,7 +55,7 @@
         <p class="col-md-4 mb-0 text-muted">© 2021 Sneakers for all, Inc</p>
 
         <a href="../main.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg"></use></svg>
+            <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg" alt="Home"></svg>
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
