--- a/baigiamasis/main/payment/payment.html
+++ b/baigiamasis/main/payment/payment.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Pay for order</title>
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light fixed-top bckgrnd">
@@ -44,14 +44,16 @@
         <div class="py-4 mt-2 mb-2 text-center">
             <img class="laces" src="../lacee.jpg" alt="">
             <h2>Checkout form</h2>
-            <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+            <p class="lead">Thank you for choosing Sneakers For All, Inc.
+                <br>
+                Coming soon.
+            </p>
         </div>
 
         <div class="row g-5">
             <div class="col-md-5 col-lg-4 order-md-last">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
                     <span class="text-secondary">Your cart</span>
-                    <span class="badge bg-secondary rounded-pill">3</span>
                 </h4>
                 <ul class="list-group mb-3">
                     <li class="list-group-item d-flex justify-content-between lh-sm">
@@ -59,32 +61,32 @@
                             <h6 class="my-0">Product name</h6>
                             <small class="text-muted">Brief description</small>
                         </div>
-                        <span class="text-muted">$12</span>
+                        <span class="text-muted">€12</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0">Second product</h6>
                             <small class="text-muted">Brief description</small>
                         </div>
-                        <span class="text-muted">$8</span>
+                        <span class="text-muted">€8</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between lh-sm">
                         <div>
                             <h6 class="my-0">Third item</h6>
                             <small class="text-muted">Brief description</small>
                         </div>
-                        <span class="text-muted">$5</span>
+                        <span class="text-muted">€5</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between bg-light">
                         <div class="text-success">
                             <h6 class="my-0">Promo code</h6>
-                            <small>EXAMPLECODE</small>
+                            <small>5NEAKER5</small>
                         </div>
-                        <span class="text-success">−$5</span>
+                        <span class="text-success">−€5</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
+                        <span>Total (EUR)</span>
+                        <strong>€20</strong>
                     </li>
                 </ul>
 
@@ -225,7 +227,24 @@
 
                     <hr class="my-4">
 
-                    <button class="w-100 btn btn-secondary btn-lg" type="submit">Continue to checkout</button>
+                    <button class="w-100 btn btn-secondary btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#checkoutModal">Continue to checkout</button>
+                    <div class="modal fade" id="checkoutModal" tabindex="-1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Please check your order information</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body py-0">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea earum est illum molestias perferendis ratione? Accusantium ad aperiam culpa ea eius in ipsum labore non, odio odit saepe voluptas!</p>
+                                </div>
+                                <div class="modal-footer flex-column border-top-0">
+                                    <button type="button" class="btn btn-lg btn-secondary w-100 mx-0 mb-2">Approve order</button>
+                                    <button type="button" class="btn btn-lg btn-light w-100 mx-0" data-bs-dismiss="modal">Back to checkout</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
@@ -237,7 +256,7 @@
         <p class="col-md-4 mb-0 text-muted">© 2021 Sneakers for all, Inc</p>
 
         <a href="../main.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg"></use></svg>
+            <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg" alt="Home"></svg>
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
