--- a/baigiamasis/main/contacts/contacts.html
+++ b/baigiamasis/main/contacts/contacts.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Contacts</title>
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="../normalize.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light fixed-top bckgrnd">
@@ -39,9 +40,46 @@
 <nav class="col c-bg-img"></nav>
 <div class="container">
     <div class="info bckgrnd">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet animi commodi cumque deserunt ea eius enim illo itaque, iusto modi nihil obcaecati praesentium quo sapiente sequi tenetur unde veniam!
-        </p>
+      <div class="row">
+        <div class="col-6">
+          <p class="fs-5 text-start">
+            Details
+          </p>
+          <p class="text-start">
+            Sneakers for all, Inc
+            <br>
+            Company code: 123456789
+            <br>
+            VAT: LT987456321
+            <br>
+            <br>
+            sneakers@for.all
+            <br>
+            +12345678901
+          </p>
+        </div>
+        <div class="col-6">
+          <p class="fs-5 text-center">
+            Leave your information with a message bellow, and we will get back to you.
+          </p>
+          <form>
+              <div class="mb-3">
+                <label for="InputName" class="form-label">Name, Surname</label>
+                <input type="text" class="form-control" id="InputName">
+          </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+              <label for="floatingTextarea" class="form-label">Enter your message</label>
+              <textarea class="form-control" placeholder="Enter your message here" id="floatingTextarea"></textarea>
+            </div>
+              <button type="submit" class="btn btn-secondary">Submit</button>
+          </form>
+        </div>
+      </div>
     </div>
 </div>
 <div class="col bckgrnd">
@@ -49,7 +87,7 @@
     <p class="col-md-4 mb-0 text-muted">© 2021 Sneakers for all, Inc</p>
 
     <a href="../main.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg"></use></svg>
+      <svg class="bi me-2" width="60" height="60"><img class="laces" src="../lacee.jpg" alt="Home"></svg>
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
