--- a/baigiamasis/main/main.html
+++ b/baigiamasis/main/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light fixed-top bckgrnd">
@@ -13,7 +14,7 @@
                 <img class="laces" src="lacee.jpg" alt="Laces">
             </a>
             <a class="navbar-brand" >Filters</a>
-            <div class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" role="toolbar">
                 <span class="navbar-toggler-icon"></span>
             </div>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -88,83 +89,41 @@
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="adidas/adidas_yeezy.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/adidas/adidas_yeezy.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">adidas yeezy 550,00€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="adidas/adidas_originals.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/adidas/adidas_originals.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">adidas originals 105,00€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="new%20balance/nb_230.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/new%20balance/nb_230.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">new balance 530 99,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="reebok/reebok_legacy.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/reebok/reebok_legacy.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">reebok legacy 90,00€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="nike/nike_am_bolt.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/nike/nike_am_bolt.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
-            </figure>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <figure class="demo">
-                <div class="display">
-                    <img src="adidas/adidas_yeezy.jpg" class="img-thumbnail img-fluid" alt="...">
-                </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
-            </figure>
-        </div>
-        <div class="col">
-            <figure class="demo">
-                <div class="display">
-                    <img src="adidas/adidas_originals.jpg" class="img-thumbnail img-fluid" alt="...">
-                </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
-            </figure>
-        </div>
-        <div class="col">
-            <figure class="demo">
-                <div class="display">
-                    <img src="new%20balance/nb_230.jpg" class="img-thumbnail img-fluid" alt="...">
-                </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
-            </figure>
-        </div>
-        <div class="col">
-            <figure class="demo">
-                <div class="display">
-                    <img src="reebok/reebok_legacy.jpg" class="img-thumbnail img-fluid" alt="...">
-                </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
-            </figure>
-        </div>
-        <div class="col">
-            <figure class="demo">
-                <div class="display">
-                    <img src="nike/nike_am_bolt.jpg" class="img-thumbnail img-fluid" alt="...">
-                </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">nike air max bolt 94,99€</figcaption>
             </figure>
         </div>
     </div>
@@ -172,41 +131,41 @@
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="adidas/adidas_yeezy.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/adidas/adidas_run.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">adidas running 75,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="adidas/adidas_originals.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/nike/nike_am_97.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">nike air max 97 139,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="new%20balance/nb_230.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/fila/fila_disruptor_b.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">fila distruptor 109,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="reebok/reebok_legacy.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/nike/nike_am_excee.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">nike excee 124,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="nike/nike_am_bolt.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/adidas/adidas_superstar.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">adidas superstar 99,99€</figcaption>
             </figure>
         </div>
     </div>
@@ -214,41 +173,83 @@
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="adidas/adidas_yeezy.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/nike/nike_am_90.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">nike air max 90 144,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="adidas/adidas_originals.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/reebok/reebok_classic.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">reebok classic 80,00€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="new%20balance/nb_230.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/new%20balance/nb_327.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">new balance 327 109,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="reebok/reebok_legacy.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/reebok/reebok_royal.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">reebok royal 17,99€</figcaption>
             </figure>
         </div>
         <div class="col">
             <figure class="demo">
                 <div class="display">
-                    <img src="nike/nike_am_bolt.jpg" class="img-thumbnail img-fluid" alt="...">
+                    <img src="shoes/fila/fila_sandblast.jpg" class="img-thumbnail img-fluid" alt="...">
                 </div>
-                <figcaption class="figure-caption fs-6 text-uppercase">My Site</figcaption>
+                <figcaption class="figure-caption fs-6 text-uppercase">fila sandblast 64,99€</figcaption>
+            </figure>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <figure class="demo">
+                <div class="display">
+                    <img src="shoes/adidas/adidas_tennis.jpg" class="img-thumbnail img-fluid" alt="...">
+                </div>
+                <figcaption class="figure-caption fs-6 text-uppercase">adidas tennis 65,00€</figcaption>
+            </figure>
+        </div>
+        <div class="col">
+            <figure class="demo">
+                <div class="display">
+                    <img src="shoes/reebok/reebok_vintage.jpg" class="img-thumbnail img-fluid" alt="...">
+                </div>
+                <figcaption class="figure-caption fs-6 text-uppercase">reebok vintage 85,00€</figcaption>
+            </figure>
+        </div>
+        <div class="col">
+            <figure class="demo">
+                <div class="display">
+                    <img src="200.jpg" class="img-thumbnail img-fluid" alt="...">
+                </div>
+                <figcaption class="figure-caption fs-6 text-uppercase"></figcaption>
+            </figure>
+        </div>
+        <div class="col">
+            <figure class="demo">
+                <div class="display">
+                    <img src="200.jpg" class="img-thumbnail img-fluid" alt="...">
+                </div>
+                <figcaption class="figure-caption fs-6 text-uppercase"></figcaption>
+            </figure>
+        </div>
+        <div class="col">
+            <figure class="demo">
+                <div class="display">
+                    <img src="200.jpg" class="img-thumbnail img-fluid" alt="...">
+                </div>
+                <figcaption class="figure-caption fs-6 text-uppercase"></figcaption>
             </figure>
         </div>
     </div>
@@ -258,7 +259,7 @@
         <p class="col-md-4 mb-0 text-muted">© 2021 Sneakers for all, Inc</p>
 
         <a href="main.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="60" height="60"><img class="laces" src="lacee.jpg"></svg>
+            <svg class="bi me-2" width="60" height="60"><img class="laces" src="lacee.jpg" alt="Home"></svg>
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
